--- a/pelamar/style.css
+++ b/pelamar/style.css
@@ -25,15 +25,12 @@ body {
     box-shadow: 1px 0 5px rgba(18, 209, 136, 0.125);
 }
 
-.top-navbar form {
+.top-navbar .input-group form {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.top-navbar form btn {
-    height: 10px;
-}
 
 .top-navbar .brand {
     width: 480px;
@@ -122,6 +119,7 @@ body {
 }
 
 .main-container .judul-content {
+    border-radius: 2px;
     background: #fff;
     padding: 25px;
     display: flex;
@@ -137,6 +135,7 @@ body {
 }
 
 .main-container .content {
+    border-radius: 2px;
     background: #fff;
     padding: 25px;
     margin-right: 45px;
@@ -166,7 +165,9 @@ body {
 }
 
 .main-container button {
-    border-radius: 0;
+    display: flex;
+    align-items: center;
+    border-radius: 5px;
     color: #fff;
     background: #0c9463;
     border: 0;
