--- a/pelamar/style.css
+++ b/pelamar/style.css
@@ -164,7 +164,7 @@ body {
     border-left: 2px solid #0c9463;
 }
 
-.main-container button {
+/* .main-container button {
     display: flex;
     align-items: center;
     border-radius: 5px;
@@ -172,7 +172,7 @@ body {
     background: #0c9463;
     border: 0;
 
-}
+} */
 
 
 .main-container button:hover {
@@ -182,6 +182,12 @@ body {
 .main-container .content .tabel {
     background: #fff;
     color: #000;
+}
+
+.main-container .profil-pelamar i {
+    margin-right: 10px;
+    opacity: 50%;
+    padding: 5px;
 }
 
 .main-container .content .input {
