--- a/pelamar/style.css
+++ b/pelamar/style.css
@@ -139,7 +139,7 @@ body {
     background: #fff;
     padding: 25px;
     margin-right: 45px;
-    font-family: 'Time New Roman', sans-serif;
+    font-family: 'Roboto', sans-serif;
     margin-bottom: 10px;
     text-align: justify;
     padding-bottom: 10px;
