--- a/perusahaan/css/style.css
+++ b/perusahaan/css/style.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     list-style: none;
     text-decoration: none;
+
 }
 
 body {
@@ -132,7 +133,8 @@ body {
     background: #fff;
     padding: 25px;
     margin-right: 45px;
-    font-family: 'Time New Roman', sans-serif;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
     margin-bottom: 10px;
     text-align: justify;
     padding-bottom: 10px;
