--- a/perusahaan/css/style.css
+++ b/perusahaan/css/style.css
@@ -142,7 +142,7 @@ body {
 }
 
 .main-container button {
-    display: flex;
+    /* display: flex; */
     align-items: center;
     border-radius: 5px;
     color: #fff;
@@ -163,6 +163,13 @@ body {
     background: #0c9463;
     color: #fff;
 } */
+.main-container .profil-perusahaan i {
+    margin-right: 10px;
+    opacity: 50%;
+    padding: 5px;
+    width: 30px;
+    height: auto;
+}
 
 .main-container .content .input {
     display: flex;
