--- a/perusahaan/css/style.css
+++ b/perusahaan/css/style.css
@@ -128,6 +128,22 @@ body {
     border-left: 2px solid #0c9463;
 }
 
+.main-container .judul-content .pilih-lowongan {
+    width: 300px;
+}
+
+.main-container .judul-content .btn {
+    background: #0c9463;
+    color: #fff;
+    border-color: #0c9463;
+}
+
+.main-container .judul-content .btn:hover {
+    background: #1ea876;
+    color: #fff;
+    border-color: #1ea876;
+}
+
 .main-container .content {
     border-radius: 2px;
     background: #fff;
@@ -141,13 +157,14 @@ body {
     border-left: 2px solid #0c9463;
 }
 
-.main-container button {
+.main-container .content button {
     /* display: flex; */
     align-items: center;
     border-radius: 5px;
     color: #fff;
     background: #0c9463;
     border: 0;
+    margin-top: 5px;
 
 }
 
@@ -175,6 +192,18 @@ body {
     display: flex;
     align-items: center;
     font-weight: bold;
+}
+
+.main-container .content .tombol-penilaian {
+    background: #0c9463;
+    color: #fff;
+    border: 0;
+}
+
+.main-container .content .tombol-penilaian:hover {
+    background: #1ea876;
+    color: #fff;
+    border: 0;
 }
 
 .display-4 {
