--- a/perusahaan/css/style.css
+++ b/perusahaan/css/style.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     list-style: none;
     text-decoration: none;
+    font-family: 'Nunito', sans-serif;
 
 }
 
@@ -17,7 +18,7 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    height: 60px;
+    height: 70px;
     background: #fff;
     display: flex;
     font-family: 'viga', sans-serif;
@@ -26,15 +27,38 @@ body {
     box-shadow: 1px 0 5px rgba(18, 209, 136, 0.125);
 }
 
+.top-navbar button {
+    background: #0c9463;
+    color: #fff;
+    border-color: #0c9463;
+}
+
+.top-navbar button:hover {
+    background: #1ea876;
+    color: #fff;
+    border-color: #0c9463;
+}
+
+.top-navbar .input-group .input {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: #f5f5f5;
+    border-width: 0 2px 0 0;
+    border-color: #fff;
+
+}
+
 .top-navbar .brand {
-    width: 255px;
+    width: 465px;
+    /* margin-right: 30px; */
     font-size: 20px;
-    font-weight: 600;
+    font-weight: 800;
     padding: 0 25px;
     color: #0c9463;
-    letter-spacing: 1px;
+    letter-spacing: 0.5px;
     text-transform: uppercase;
-    border-right: 1px solid #f5f5f5;
+    /* border-right: 1px solid #f5f5f5; */
 }
 
 .top-navbar .menu {
@@ -64,9 +88,9 @@ body {
 
 .sidebar {
     position: fixed;
-    top: 60px;
+    top: 70px;
     left: 0;
-    width: 250px;
+    width: 280px;
     height: 100%;
     background: #0c9463;
 }
@@ -81,16 +105,20 @@ body {
     transition: all 0.2s ease;
 }
 
-.sidebar ul li a .icon {
-    font-size: 18px;
-    vertical-align: middle;
+.sidebar ul li a i {
+    font-size: 15px;
+    margin-right: 3px;
+    width: 15px;
+    height: auto;
 }
 
 .sidebar ul li a .text {
     margin-left: 10px;
-    font-family: 'viga', sans-serif;
+    font-size: 15px;
+    font-family: 'Nunito', sans-serif;
+    font-weight: bold;
     color: #fff;
-    letter-spacing: 0.5px;
+    letter-spacing: 0.4px;
     text-transform: uppercase;
 
 }
@@ -100,32 +128,27 @@ body {
     color: #fff;
 }
 
-/* .nav-link:hover {
-    background-color: #0c9463;
-    border-radius: 4px;
-} */
-
 .main-container {
-    margin-top: 23px;
+    margin-top: 30px;
     margin-left: 250px;
     padding: 25px;
     width: calc(100% - 250px);
 }
 
 .main-container .judul-content {
-    border-radius: 2px;
+    border-radius: 4px;
     background: #fff;
     padding: 25px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-right: 45px;
-    font-family: 'viga', sans-serif;
     color: #0c9463;
     margin-bottom: 10px;
     padding-bottom: 10px;
     text-align: justify;
-    border-left: 2px solid #0c9463;
+    /* border-left: 2px solid #0c9463; */
+    box-shadow: 1px 0 5px rgba(179, 179, 179, 0.125);
 }
 
 .main-container .judul-content .pilih-lowongan {
@@ -145,16 +168,22 @@ body {
 }
 
 .main-container .content {
-    border-radius: 2px;
+    border-radius: 4px;
     background: #fff;
     padding: 25px;
     margin-right: 45px;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 500;
+    font-family: 'Nunito', sans-serif;
+    font-weight: 400;
     margin-bottom: 10px;
     text-align: justify;
     padding-bottom: 10px;
-    border-left: 2px solid #0c9463;
+    box-shadow: 1px 0 5px rgba(179, 179, 179, 0.125);
+}
+
+.main-container .content img {
+    width: 100%;
+    height: auto;
+    background: #f5f5f5;
 }
 
 .main-container .content button {
@@ -180,7 +209,7 @@ body {
     background: #0c9463;
     color: #fff;
 } */
-.main-container .profil-perusahaan i {
+.main-container .profil-user i {
     margin-right: 10px;
     opacity: 50%;
     padding: 5px;
@@ -204,6 +233,18 @@ body {
     background: #1ea876;
     color: #fff;
     border: 0;
+}
+
+.main-container .content .tombol-pengumuman {
+    background: #0c9463;
+    color: #fff;
+    border-color: #0c9463;
+}
+
+.main-container .content .tombol-pengumuman:hover {
+    background: #1ea876;
+    color: #fff;
+    border-color: #1ea876;
 }
 
 .display-4 {
