validasi belum selesai

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
     width: 25%;
     box-shadow: 0 3px 20px rgba(0, 0, 0, 0.3);
     padding: 25px;
-    border-radius: 2px;
+    border-radius: 4px;
     background-color: white;
 }
 
@@ -144,24 +144,24 @@ body {
 }
 
 .container .judul-content {
-    border-radius: 2px;
+    border-radius: 4px;
     background: #fff;
     padding: 25px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     /* margin-right: 10px; */
-    font-family: 'viga', sans-serif;
     color: #0c9463;
     margin-bottom: 10px;
     padding-bottom: 10px;
     text-align: justify;
-    border-left: 2px solid #0c9463;
+    text-transform: uppercase;
+    box-shadow: 0 0 5px rgba(75, 75, 75, 0.125);
 }
 
 
 .container .content {
-    border-radius: 2px;
+    border-radius: 4px;
     background: #fff;
     padding: 25px;
     /* margin-right: 10px; */
@@ -170,13 +170,14 @@ body {
     margin-bottom: 10px;
     text-align: justify;
     padding-bottom: 10px;
-    border-left: 2px solid #0c9463;
+    box-shadow: 0 0 5px rgba(75, 75, 75, 0.125);
 }
 
 .container .tampil-lowongan {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    border-width: 0 0 0 0;
 }
 
 .container img {
@@ -198,17 +199,18 @@ body {
     margin-bottom: 30px;
 }
 
-.container h5 {
+.container h6 {
     color: #0c9463;
-    text-transform: uppercase;
+    text-transform: capitalize;
 }
 
 .container p {
     text-transform: capitalize;
+    font-size: 14px;
 }
 
 .container ul {
-    font-size: 14px;
+    font-size: 12px;
     margin-bottom: 10px;
 
 }
@@ -223,7 +225,7 @@ body {
 
 
 .container li {
-    margin-bottom: 5px;
+    margin-bottom: 3px;
 }
 
 
