--- a/perusahaan/css/style.css
+++ b/perusahaan/css/style.css
@@ -154,6 +154,8 @@ body {
     0 3px 7px rgba(0, 0, 0, 0.05);
 }
 
+
+
 .main-container .judul-content .pilih-lowongan {
   width: 300px;
 }
@@ -217,6 +219,13 @@ body {
   background: #f5f5f5;
 }
 
+.main-container .content .jurusan button {
+  width: 825px;
+  color: #495057;
+  background: none;
+  border: 1px solid #ced4da;
+}
+
 .main-container .content button {
   /* display: flex; */
   align-items: center;
@@ -242,7 +251,7 @@ body {
   margin-right: 10px;
   opacity: 50%;
   padding: 5px;
-  width: 30px;
+  width: 20px;
   height: auto;
 }
 
@@ -356,12 +365,14 @@ body {
   color: #0c9463;
   text-transform: capitalize;
 }
+
 .main-container .tampil-lowongan .card-title {
   text-transform: capitalize;
   font-weight: 700;
   color: #0c9463;
   font-size: 14px;
 }
+
 .main-container .tampil-lowongan p {
   text-transform: capitalize;
   font-size: 13px;
